     url. (Bug #585309, Gary van der Merwe)
   * Fix a bug where branch labels don't show if the have the same tips.
     (Bug # 485236, Gary van der Merwe)
   * qlog . in a sub dir now filters to only show the sub dir.
     (Bug #517592, Gary van der Merwe)
   * Fix crash we viewing file history from qbrowse/bzr explorer.
     (Bug #585280, Gary van der Merwe)
 * qupdate, qunbind, qgetupdates:  new --immediate option will run these
   commands without waiting for the user to click on the Ok button (Luis Arias)
 * qannotate:
   * Add find and goto line interfaces. The style for this interface will be
     used for other browsing windows in the future.
     (Bug #215256, Gary van der Merwe)
   * Double clicking or pressing enter for a revision now changes the annotated
     revision. Please use the context menu to get to the diff.
     (Bug #404276, Gary van der Merwe)
   * When changinging the annotated revision, the scroll position, and selection
     are maintained. (Bug #404288, Gary van der Merwe)


0.19 Beta 1 "Monkey-puzzle, aka Araucaria araucana" - 2010/03/29
----------------------------------------------------------------
 * Added Hungarian translation.
 * qcommit: Give the user the option to update the branch if it is not up to
   date. (Bug #439920, Gary van der Merwe)
 * qpush, qmerge, etc.: When there are uncommit changes in the working tree,
   give the user the option to commit, or revert. (Gary van der Merwe)
 * qlog: Improve performance by using KnownGraph. (John Arbash Meinel,
   Gary van der Merwe)
 * TreeWidget dialogs (qcommit, qadd, qrevert, qbrowse):
   Performance improvements for select all, and changeing filters.
   (Bug #513105, Bug #476641, Gary van der Merwe)
 * Improve startup performance by using lazy imports. (Gary van der Merwe)

Note: qbzr now requires bzr 2.1.


0.18.6 - 2010-05-04
-------------------
Maintenance release.

 * qlog: Fix a bug with search. (Bug #575338, Gary van der Merwe)